# network-course

./: CMakeLists.txt  main.c
http/inc/: errors.h  http.h
http/src/: http.c
logger/inc/: logger.h
logger/src/: logger.c
script/: script.js
server_worker/inc/: errors.h  request_pool_t.h  request_t.h  server_worker_t.h
server_worker/src/: request_pool_t.c  request_t.c  server_worker_t.c
utils/inc/: file_check_status.h  files.h
utils/src/: files.c
www/: index.html  styles.css
